Prevents inline code samples from wrapping.
Code samples within paragraphs (i.e. not blocks of code, but the
markup delineating commands etc used in a normal English paragraph)
would sometimes run up against the right margin and wrap, producing
misleading results.

This adds a nowrap rule to the CSS, including the print stylesheet,
in order to prevent line wrapping occurring inside a <code> tag, when
the code tag is itself inside a <p>aragraph tag.

--- a/css/swc-print.css
+++ b/css/swc-print.css
@@ -37,6 +37,11 @@
     background: unset;
   }
 
+  /* don't wrap code samples inlined in paragraphs */
+  p > code {
+  	white-space: nowrap;
+  }
+
   pre.sourceCode::before,
   pre.input::before. {
       content: "Input:";
@@ -71,4 +76,3 @@
     display: none;
   }
 }
-
